# stellar-trust-escrow

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  SECURITY.md  docker-compose.yml  eslint.config.js  package-lock.json  slither.config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  release.yml
.husky/: pre-push
backend/: .env.example  jest.config.js  jest.setup.js  package.json  server.js
backend/.husky/: pre-commit  pre-push
backend/__mocks__/: redis.js
backend/config/: logger.js  rateLimits.js
backend/database/: schema.prisma
backend/gateway/: index.js
backend/lib/: connectionMonitor.js  logger.js  prisma.js  prismaMetrics.js  retryUtils.js  sentry.js  tenantContext.js
backend/middleware/: compression.js  publicRateLimit.js  rateLimit.js  responseTime.js  validation.js
backend/queues/: index.js
backend/services/: auditService.js  backupMonitor.js  cacheService.js  emailService.js  escrowRealtime.js  eventIndexer.js  paymentService.js  reputationSearchService.js  reputationService.js  searchService.js  (+1 more)
contracts/escrow_extensions/: Cargo.toml
contracts/escrow_extensions/src/: events.rs  lib.rs  tests.rs
docs/: arbiter-guide.md  audit-report-template.md  bridge-integration.md  disaster-recovery.md  elasticsearch-reputation-index.md  error-codes.md  event-schema.md  gas-profiling.md  multisig-escrow-guide.md  recurring-payments.md  reputation-scoring.md  slashing-mechanism.md  smart-contract-security-checklist.md
frontend/: jest.setup.cjs
mobile/: package.json
scripts/: backup.sh  gas-profile.sh  restore_pitr.sh
(+117 files in other folders)
